# DeepResearchAgent

./: .env.example  .gitattributes  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt  text.txt
agent/: async_graphs.py  factory.py  llm.py  load_prompt.py  main_agent.py  result.py  sandbox.py
agent/subagents/: database_query_agent.py  internet_sub_agent.py  rag_sub_agent.py
agent_memory/: __init__.py  inference.py  long_term.py
api/: context.py  monitor.py  rate_limit.py  security.py  server.py
api/routers/: __init__.py  auth.py  conversations.py  files.py  image_knowledge.py  ragflow.py  task.py  websocket.py
api/schemas/: __init__.py  auth.py  conversation.py  ragflow.py  task.py
api/services/: __init__.py  auth_service.py  conversation_service.py  file_service.py  image_knowledge_service.py  ragflow_service.py  task_service.py
base/: compile_langchain.py  compositeBackend.py  deep_agents_skills.py  deepagent.py  deepagent_human_hitl.py  stream.py  subagent.py
core/: __init__.py  paths.py  settings.py
deploy/memory/: docker-compose.yml
deploy/observability/: docker-compose.yml
deploy/vllm/: docker-compose.yml
docs/: DEVELOPMENT.md  MEMORY_DESIGN.md  PROJECT_STRUCTURE.md
evaluation/: __init__.py  capture.py  cli.py  code_metrics.py  collector.py  dataset.py  models.py  phoenix.py  pyproject.toml  ragas_metrics.py  report.py
evaluation/datasets/: cases.jsonl
image_knowledge/: __init__.py  embedding.py  store.py
observability/: __init__.py  tracing.py
prompt/: prompts.yml
ragflow/: config.py  ragflow_use_demo.py
skills/: __init__.py  installer.py  loader.py  registry.py
skills/database-query/: SKILL.md
skills/document-generation/: SKILL.md
skills/image-analysis/: SKILL.md
skills/image-retrieval/: SKILL.md
skills/long-term-memory/: SKILL.md
skills/ragflow-knowledge-base/: SKILL.md
skills/structured-data-query/: SKILL.md
skills/web-research/: SKILL.md
tests/: test_agent_runtime.py  test_async_worker_skills.py  test_conversation_service.py  test_core_paths.py  test_evaluation.py  test_file_service.py  test_image_analysis.py  test_image_knowledge.py  test_memory_inference.py  test_observability.py  test_ragflow_image_service.py  test_sandbox_runtime.py  test_settings.py  test_skill_installer.py  test_task_service.py  test_typst_document.py
tools/: __init__.py
tools/database/: __init__.py  mysql.py
tools/document/: __init__.py  markdown.py  pdf.py  typst_renderer.py
tools/document/templates/: report.typ
tools/file/: __init__.py  read_file.py
tools/memory/: __init__.py  long_term.py
tools/multimodal/: __init__.py  image.py  search.py
tools/ragflow/: __init__.py  base.py  config.py  images.py  knowledge_base.py
tools/search/: __init__.py  internet_search.py
tools/skill/: __init__.py  install.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.vue  main.ts  types.ts
ui/src/api/: client.ts
ui/src/components/: ChatPanel.vue  ExecutionProcess.vue  ImageKnowledgeManager.vue  KnowledgeBaseManager.vue  KnowledgeBasePage.vue  SessionFiles.vue  WorkspaceDrawer.vue  WorkspaceRail.vue
ui/src/composables/: useImageAssets.ts  useImageKnowledge.ts  useRagflowKnowledge.ts
ui/src/styles/: app.css
ui/src/utils/: formatters.ts
utils/: path_utils.py  word_converter.py
