[project]
name = "deep-agent-project"
version = "0.1.0"
description = "A multi-agent deep research workspace with database, RAGFlow, web search, and document tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.0,<0.6.0",
    "fastapi~=0.129.2",
    "httpx~=0.28.1",
    "langchain~=1.2.10",
    "langchain-core~=1.4.8",
    "langchain-daytona>=0.0.4",
    "langchain-openai~=1.1.10",
    "langgraph-checkpoint-redis>=0.5.0",
    "markdown~=3.10.2",
    "mysql-connector-python~=9.6.0",
    "openpyxl~=3.1.5",
    "pandas~=3.0.1",
    "pillow~=11.3.0",
    "pydantic~=2.12.5",
    "pymilvus~=2.4.9",
    "pypdf~=6.7.2",
    "python-docx~=1.2.0",
    "python-dotenv~=1.2.1",
    "python-multipart~=0.0.22",
    "pywin32==312; sys_platform == 'win32'",
    "pyyaml~=6.0.3",
    "ragflow-sdk~=0.24.0",
    "requests~=2.34.2",
    "setuptools<81",
    "sqlalchemy~=2.0.46",
    "sqlmodel~=0.0.38",
    "tavily-python~=0.7.21",
    "uvicorn[standard]~=0.41.0",
    "xlrd~=2.0.1",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
